--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.15.0",
     "react": "^19.1.0",
+    "react-chatbotify": "^2.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
